--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ sled = "0.34.7"
 tokio = { version = "1.40.0", features = ["full"] }
 log = "0.4.22"
 lru = "0.7.8"
-aes = "0.7.5"
-block-modes = "0.8.1"
 rand = "0.8.5"
-regex = "1.11.0"
-base64 = "0.13.0"
 env_logger = "0.9.3"
+aes-gcm = "0.10"
+aes = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "0.8", features = ["v4"] }
