--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ aes = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
+toml = "0.5.8"
