--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 toml = "0.5.8"
 rayon = "1.5"
+
+[dev-dependencies]
+tempfile = "3.3"
