--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 authors = ["Zander Lewis <zander@zanderlewis.dev>"]
 description = "A simple, fast, and secure database."
-license = "APACHE-2.0"
+license = "Apache-2.0"
 repository = "https://github.com/zanderle/vibra"
 readme = "README.md"
 
