--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0"
 uuid = { version = "1.10", features = ["v4"] }
 toml = "0.8.19"
 rayon = "1.5"
+futures = "0.3"
 
 [dev-dependencies]
 tempfile = "3.3"
